fixed horizontal scroll

--- a/source/scss/_typography.scss
+++ b/source/scss/_typography.scss
@@ -14,6 +14,7 @@ body {
   line-height:1.7em;
   color: #818385;
   background-color: #121212;
+  overflow-x: hidden;
 
 }
 
